fix: add row spacing to section to give breathing room

--- a/app/assets/css/_layout.scss
+++ b/app/assets/css/_layout.scss
@@ -4,10 +4,20 @@
     max-width: 30rem;
 }
 
+.row-section-separator {
+    margin-top: 2.5rem;
+    margin-bottom: 2.5rem;
+}
+
 @media screen and (min-width: map-get($break-point, 'md')) {
     .container, .blog-container {
         padding: 0 4.25rem;
         max-width: unset;
+    }
+
+    .row-section-separator {
+        margin-top: 3.5rem;
+        margin-bottom: 3.5rem;
     }
 }
 
@@ -20,5 +30,10 @@
     .blog-container {
         padding: 0 1rem;
         max-width: 40rem;
+    }
+
+    .row-section-separator {
+        margin-top: 5rem;
+        margin-bottom: 5rem;
     }
 }
